<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.ccnull.cc2016project.ui.activity.SenderActivity">

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount"/>

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/button_create_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenBG"
        android:text="@string/button_create_payment"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_play_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenBG"
        android:text="@string/button_play_again"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout_searching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/searching_for_receiver"
            android:textScaleX="1.3"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/user_picture"
            android:src="@drawable/sound"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/searching_for_receiver_desc"
            android:textScaleX="1.3"/>

    </LinearLayout>

</LinearLayout>
